# AISystemDesignPattern

./: .gitignore  AI-Design-Patterns-Summary.ipynb  Evaluate-Optimizer.ipynb  Orchestrator-Worker.ipynb  Parallelization.ipynb  PromptChaining.ipynb  README.md  Routing.ipynb  main.py  pyproject.toml  requirements.txt
Project01/: AISendEmail.py  CliTaskTest.py  README.md
Project01/AboutMe/: summary.txt
