[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "anthropic>=0.49.0",
    "anyio>=4.12.1",
    "asttokens>=3.0.1",
    "autogen-agentchat>=0.4.9.2",
    "autogen-ext[grpc,mcp,ollama,openai]>=0.4.9.2",
    "bs4>=0.0.2",
    "certifi>=2022.5.18,<2026.0.0",
    "colorama>=0.4.6",
    "comm>=0.2.3",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "debugpy>=1.8.20",
    "decorator>=5.2.1",
    "distro>=1.9.0",
    "dotenv>=0.9.9",
    "executing>=2.2.1",
    "fonttools>=4.61.1",
    "gradio>=5.22.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.11",
    "ipykernel>=7.1.0",
    "ipython>=9.10.0",
    "ipython-pygments-lexers>=1.1.1",
    "ipywidgets>=8.1.5",
    "jedi>=0.19.2",
    "jiter>=0.13.0",
    "jupyter-client>=8.8.0",
    "jupyter-core>=5.9.1",
    "kiwisolver>=1.4.9",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langsmith>=0.3.18",
    "lxml>=5.3.1",
    "markdown>=3.10.1",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "mcp-server-fetch>=2025.1.17",
    "mcp[cli]>=1.5.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.2",
    "openai>=2.17.0",
    "openai-agents>=0.0.15",
    "packaging>=26.0",
    "pandas>=3.0.0",
    "parso>=0.8.5",
    "pillow>=12.1.0",
    "platformdirs>=4.5.1",
    "playwright>=1.51.0",
    "plotly>=6.0.1",
    "polygon-api-client>=1.14.5",
    "prompt-toolkit>=3.0.52",
    "psutil>=7.2.2",
    "pure-eval>=0.2.3",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pygments>=2.19.2",
    "pyparsing>=3.3.2",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "pyzmq>=27.1.0",
    "requests>=2.32.3",
    "sendgrid>=6.11.0",
    "setuptools>=78.1.0",
    "six>=1.17.0",
    "smithery>=0.1.0",
    "sniffio>=1.3.1",
    "speedtest-cli>=2.1.3",
    "stack-data>=0.6.3",
    "tornado>=6.5.4",
    "tqdm>=4.67.3",
    "traitlets>=5.14.3",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "tzdata>=2025.3",
    "wcwidth>=0.5.3",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]